Fixed low-contrast in footer link

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -8,7 +8,8 @@ footer {
     background-color: color("footer");
     margin-top: 25px;
 
-    a {
+    a,
+    a:visited {
         color: darken("footer-link", 75%);
     }
 
